WIP: Begin TS migration

--- a/css/WindroseMD-CSS.css
+++ b/css/WindroseMD-CSS.css
@@ -356,7 +356,8 @@
 .dmt-canvas-cleararea,
 .dmt-canvas-add-object,
 .dmt-canvas-add-text,
-.dmt-canvas-measure {
+.dmt-canvas-measure,
+.dmt-canvas-diagonal-fill {
   cursor: crosshair;
 }
 
